--- a/source/index.html
+++ b/source/index.html
@@ -706,7 +706,7 @@
 
       <div class="page-footer__copyright">
         Разработано в
-        <a class="page-footer__logo-link" href="https://up.htmlacademy.ru/profession/frontender/14/adaptive/26" target="_blank">
+        <a class="page-footer__logo-lnk" href="https://up.htmlacademy.ru/profession/frontender/14/adaptive/26" target="_blank">
           HTML Academy
           <svg>
             <use href="img/icons/stack.svg#logo-academy"></use>
